Task1 Image Align

--- a/Day1/task2.css
+++ b/Day1/task2.css
@@ -1,14 +1,6 @@
-.form-format{
-    border: double gray 3px;
-    height: 200 px;
-    width: 230px;
-    text-align: center;
-    margin-left: 40%;
-    margin-top: 13.5%;
-}
-input[type="text"],input[type="email"]{
-    margin: 5px;
-    padding: 5px;
-    background-color: azure;
-    border: dotted lightgray 1px;
+img{
+    height: 280px;
+    width: 280px;
+    border: solid black 1px;
+    margin: 9px 20px 9px 20px;
 }
