--- a/Day1/task2.css
+++ b/Day1/task2.css
@@ -2,5 +2,5 @@ img{
     height: 280px;
     width: 280px;
     border: solid black 1px;
-    margin: 9px 20px 9px 20px;
+    padding: 9px 20px 9px 20px;
 }
